[gd_scene load_steps=8 format=3 uid="uid://cqb0bl8n7umx5"]

[ext_resource type="Texture2D" uid="uid://b8yt1rswu6ymw" path="res://Assets/Guns/pickable_weapons/VK-PDW (QBZ191+X95 HYBRID)-PICKABLE.png" id="1_0n8tc"]
[ext_resource type="Script" uid="uid://dvmw1jjob3d4m" path="res://Scripts/inventory.gd" id="1_k1vlg"]
[ext_resource type="Texture2D" uid="uid://cw3eaqhekyb6l" path="res://Assets/Guns/gun_thumbnails/VK-PDW (QBZ191+X95 HYBRID).png" id="1_wdn4f"]
[ext_resource type="Texture2D" uid="uid://blcqtjkj0om64" path="res://Assets/Guns/pickable_weapons/VK-V9 (QBZ191+X95 HYBRID)-PICKABLE.png" id="2_k1vlg"]
[ext_resource type="Texture2D" uid="uid://bpw6a5fgfost4" path="res://Assets/Guns/pickable_weapons/KR-85C1 - HK416-PICKABLE.png" id="3_c5ffv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_k1vlg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c5ffv"]
texture = SubResource("CanvasTexture_k1vlg")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(371, 25)
script = ExtResource("1_k1vlg")

[node name="MainLayout" type="PanelContainer" parent="."]
self_modulate = Color(0.15, 0.10815, 0.069, 1)
layout_mode = 0
offset_left = 326.0
offset_top = 43.0
offset_right = 888.0
offset_bottom = 374.0
theme_override_styles/panel = SubResource("StyleBoxTexture_c5ffv")

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="WeaponListPanel" type="VBoxContainer" parent="MainLayout/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="INV" type="Label" parent="MainLayout/HBoxContainer/WeaponListPanel"]
layout_mode = 2
text = "INV"

[node name="GridContainer" type="GridContainer" parent="MainLayout/HBoxContainer/WeaponListPanel"]
layout_mode = 2
theme_override_constants/h_separation = 15
columns = 2

[node name="WeaponThumbnail1" type="TextureRect" parent="MainLayout/HBoxContainer/WeaponListPanel/GridContainer"]
layout_mode = 2
texture = ExtResource("1_0n8tc")

[node name="Weapon1" type="Button" parent="MainLayout/HBoxContainer/WeaponListPanel/GridContainer"]
layout_mode = 2
text = "VK-PDW"

[node name="WeaponThumbnail3" type="TextureRect" parent="MainLayout/HBoxContainer/WeaponListPanel/GridContainer"]
layout_mode = 2
texture = ExtResource("2_k1vlg")

[node name="Weapon2" type="Button" parent="MainLayout/HBoxContainer/WeaponListPanel/GridContainer"]
layout_mode = 2
text = "VK-V9"

[node name="WeaponThumbnail2" type="TextureRect" parent="MainLayout/HBoxContainer/WeaponListPanel/GridContainer"]
layout_mode = 2
texture = ExtResource("3_c5ffv")

[node name="Weapon3" type="Button" parent="MainLayout/HBoxContainer/WeaponListPanel/GridContainer"]
layout_mode = 2
text = "KR-85c1"

[node name="DetailsPanel" type="VBoxContainer" parent="MainLayout/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WeaponName" type="Label" parent="MainLayout/HBoxContainer/DetailsPanel"]
layout_mode = 2
text = "weapon name"

[node name="WeaponImg" type="TextureRect" parent="MainLayout/HBoxContainer/DetailsPanel"]
layout_mode = 2
texture = ExtResource("1_wdn4f")

[node name="WeaponStats" type="GridContainer" parent="MainLayout/HBoxContainer/DetailsPanel"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="WeaponType" type="Label" parent="MainLayout/HBoxContainer/DetailsPanel/WeaponStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Weapon Type"

[node name="WeaponMag" type="Label" parent="MainLayout/HBoxContainer/DetailsPanel/WeaponStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Mag Size"

[node name="WeaponDMG" type="Label" parent="MainLayout/HBoxContainer/DetailsPanel/WeaponStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Damage"

[node name="WeaponMaxMag" type="Label" parent="MainLayout/HBoxContainer/DetailsPanel/WeaponStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Max Reserve"

[node name="WeaponFireRate" type="Label" parent="MainLayout/HBoxContainer/DetailsPanel/WeaponStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Fire Rate"

[node name="WeaponReload" type="Label" parent="MainLayout/HBoxContainer/DetailsPanel/WeaponStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Reload Time"

[node name="Descriptions" type="RichTextLabel" parent="MainLayout/HBoxContainer/DetailsPanel"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
fit_content = true

[connection signal="pressed" from="MainLayout/HBoxContainer/WeaponListPanel/GridContainer/Weapon1" to="." method="_on_weapon_1_pressed"]
[connection signal="pressed" from="MainLayout/HBoxContainer/WeaponListPanel/GridContainer/Weapon2" to="." method="_on_weapon_2_pressed"]
[connection signal="pressed" from="MainLayout/HBoxContainer/WeaponListPanel/GridContainer/Weapon3" to="." method="_on_weapon_3_pressed"]
